--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 body {
   font-family: sans-serif;
+  background-color: #f3f3f3;
+  color: #6e0000;
+  margin: 2em;
 }
 span {
   margin: 2px 5px;
@@ -12,9 +15,6 @@ span {
   background-color: lightgreen;
   color: red;
 }
-.spn_spacer {
-  width: 20px;
-}
 .spn_comment {
   margin: 2px 10px;
 }
@@ -25,8 +25,8 @@ span {
 .voteBtn {
   text-decoration: none;
 }
-#dv-topic-vote {
-  display: inline;
+#dv-header {
+  margin-bottom: 1em;
 }
 #dv-header {
   height: 20px;
@@ -41,9 +41,279 @@ span {
   clear: both;
   margin-top: 10px;
 }
-#dv-new-listing, #dv-new-comment, #dv-user-update {
+#dv-new-listing, #dv-new-comment, #a-user-update, #a-forgot {
   visibility: hidden;
 }
-#dv-edit-topic, #a-edit-topic-message, #dv-user-form {
+#div-error-message, #dv-edit-topic, #a-edit-topic-message, #dv-user-form {
   display: none;
+}
+
+.frm_labels {
+  text-align: right;
+}
+.aGrid {
+  display: grid;
+  grid-column-gap: 0.5em;
+  grid-row-gap: 1em;
+}
+
+#dv-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+#dv-tagline {
+  grid-area: 1 / 1;
+}
+#dv-register, #dv-logout {
+  gird-area: 1 / 2;
+  text-align: right;
+}
+
+/* login page only */
+#login-page{
+  grid-template-rows: 2em 1fr 1fr;
+}
+#dv-form-login{
+  grid-area: 2 / 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+}
+#lbl-username {
+  grid-area: 1 / 1;
+}
+#npt-username {
+  grid-area: 1 / 2;
+}
+#lbl-password {
+  grid-area: 2 / 1;
+}
+#npt-password {
+  grid-area: 2 / 2;
+}
+#frm-login-submit {
+  grid-area: 3 / 2;
+  width: 5em;
+  place-self: center;
+}
+#frm-login-reset {
+  grid-area: 3 / 1;
+  width: 5em;
+  place-self: center;
+}
+#dv-forgot {
+  grid-area: 3 / 1;
+  place-self: center;
+  font-size: 0.75em;
+}
+
+/* listing page */
+#listing-page {
+  grid-template-rows: 2em 1em auto 2em 1fr;
+}
+#dv-new-listing {
+  grid-template-columns: 25% auto 10%;
+}
+#npt-topic-name {
+  grid-area: 1 / 1;
+}
+#npt-topic-desc{
+  grid-area: 1 / 2;
+}
+#frm-listing-cancel {
+  grid-row: 2;
+  grid-column: 1;
+  width: 5em;
+  place-self: center;
+}
+#frm-listing-submit {
+  grid-area: 2 / 2;
+  width: 5em;
+  place-self: center;
+}
+.dv-topic {
+  display: grid;
+  grid-template-rows: 1em 1fr;
+  grid-template-columns: 1em auto 1em 1em 50%;
+  grid-column-gap: 0.5em;
+  grid-row-gap: 0.5em;
+  align-items: center;
+}
+.spn_topic_id {
+  grid-area: 1 / 1;
+}
+.a_topic_link {
+  grid-area: 1 / 2;
+}
+.spn_topic_votes {
+  grid-area: 1 / 3;
+  place-self: center;
+}
+.voteBtn {
+  grid-area: 1 / 4;
+  place-self: center;
+}
+.dv_topic_desc {
+  grid-row: 2;
+  grid-column: 1 / span 5;
+  margin-left: 1.5em;
+  margin-bottom: 1em;
+  padding: 5px;
+  border-width: 1px;
+  border-color: #dddddd;
+  border-style: solid;
+  background-color: #eeeeee;
+}
+/* topics page */
+#topic-page {
+  grid-template-rows: 2em 1fr 1em auto 1em 1fr 1em;
+}
+#dv-topic {
+  grid-template-rows: 1em 2fr;
+  grid-template-columns: auto 1em 1em 1em 50%;
+}
+#dv-topic-title {
+  grid-area: 1 / 1;
+}
+#dv-topic-vote {
+  grid-area: 1 / 2;
+}
+#a-topic-vote-btn {
+  grid-area: 1 / 3;
+}
+#dv-topic-desc {
+  margin-left: 0;
+}
+#dv-comments-header {
+  font-size: 0.8em;
+}
+#dv-comment-box {}
+.commmentGrid {
+  display: grid;
+  grid-template-rows: 1em auto;
+  grid-template-columns: 1em auto;
+  grid-column-gap: 0.5em;
+  grid-row-gap: 0.5em;
+  align-items: center;
+  margin-bottom: 1em;
+}
+.commenter_name {
+  grid-row: 1;
+  grid-column: 1 / 3;
+}
+.dv_comment {
+  grid-row: 2;
+  grid-column: 2;
+  background-color: #efefef;
+  padding: 0.5em;
+}
+.dv_update_delete {
+  grid-row: 3;
+  grid-column: 1 / 2;
+}
+.spn_update_link {
+  grid-column: 1;
+  width: 5em;
+  font-size: 0.75em;
+  place-self: center;
+}
+.spn_delete_link {
+  grid-column: 1;
+  width: 5em;
+  font-size: 0.75em;
+  place-self: center;
+}
+#dv-new-comment {
+  grid-template-rows: 1fr 2em;
+  grid-template-columns: 25% 25% auto;
+}
+#npt-comment {
+  grid-row: 1;
+  grid-column: 1 / 4;
+}
+#frm-comment-submit {
+  grid-area: 2 / 2;
+  width: 5em;
+  place-self: center;
+}
+#frm-comment-cancel {
+  grid-area: 2 / 1;
+  width: 5em;
+  place-self: center;
+}
+/* user page */
+#user-page, #register-page {
+  grid-template-rows: 2em 1fr 1em auto;
+}
+#dv-user-info {
+  grid-template-rows: 1.5em 1.5em 1.5em 1.5em;
+  grid-template-columns: 25% 25% 1em auto;
+}
+#dv-user-form {
+  grid-template-rows: 1.5em 1.5em 1.5em 1.5em;
+  grid-template-columns: 25% 25% auto;
+}
+#lbl-email-dsp, #lbl-email-edt, #lbl_reg_username {
+  grid-area: 1 / 1;
+}
+#lbl-firstname-dsp, #lbl-firstname-edt, #lbl_reg_password1 {
+  grid-area: 2 / 1;
+}
+#lbl-lastname-dsp, #lbl-lastname-edt, #lbl_reg_password2 {
+  grid-area: 3 / 1;
+}
+#dv-user-id {
+  grid-area: 1 / 3;
+}
+#dv-user-email, #npt-user-email, #npt-reg-username {
+  grid-area: 1 / 2;
+}
+#dv-user-firstName, #npt-user-firstName, #npt-reg-password {
+  grid-area: 2 / 2;
+}
+#dv-user-lastName, #npt-user-lastName, #rpt-reg-password {
+  grid-area: 3 / 2;
+}
+#frm-user-submit, #a-user-update {
+  grid-area: 4 / 2;
+  width: 5em;
+  place-self: center;
+}
+#frm-user-cancel {
+  grid-area: 4 / 1;
+  width: 5em;
+  place-self: center;
+}
+#a-user-update {
+  font-size: 0.8em;
+}
+.can_update {
+  background-color: #ffffff;
+  padding: 2px;
+}
+/* registration page */
+#dv-reg-form {
+  grid-template-rows: 1.5em 1.5em 1.5em 1.5em, 1.5em, 1.5em;
+  grid-template-columns: 25% 25% auto;
+}
+#lbl_reg_firstName {
+  grid-area: 4 / 1;
+}
+#npt-reg-firstName {
+  grid-area: 4 / 2;
+}
+#lbl_reg_lastName {
+  grid-area: 5 / 1;
+}
+#npt-reg-lastName {
+  grid-area: 5 / 2;
+}
+#frm-reg-submit {
+  grid-area: 6 / 2;
+  width: 5em;
+  place-self: center;
+}
+#frm-reg-reset {
+  grid-area: 6 / 1;
+  width: 5em;
+  place-self: center;
 }
