--- a/css/main.css
+++ b/css/main.css
@@ -4,50 +4,52 @@ body {
   color: #6e0000;
   margin: 2em;
 }
-span {
-  margin: 2px 5px;
-}
-.listSpan {
-  padding: 1px 5px;
-}
+label { font-size: 0.8em; }
 .errorMsg {
   padding: 1px 5px;
   background-color: lightgreen;
   color: red;
 }
-.spn_comment {
-  margin: 2px 10px;
-}
+.spn_comment { margin: 2px 10px; }
 .spn_update_link {
   margin: 2px 20px;
   text-align: right;
 }
 .voteBtn {
   text-decoration: none;
+  grid-area: 1 / 4;
+  place-self: center;
 }
-#dv-header {
-  margin-bottom: 1em;
+.smlCntr {
+  width: 5em;
+  place-self: center;
 }
-#dv-header {
-  height: 20px;
+.flatButtons {
+  width: 5em;
+  font-size: 0.75em;
+  place-self: center;
+  background-color:#e7e7e7;
+  border:1px solid #666666;
+  border-radius: 3px;
+  color: #000000;
+  padding: 3px 5px;
+  text-align: center;
+  text-decoration: none;
 }
-#dv-tagline {
-  float: left;
-}
-#dv-logout {
-  float: right;
-}
+#dv-header { margin-bottom: 1em; }
+#dv-header { height: 20px; }
+#dv-tagline { float: left; }
+#dv-logout { float: right; }
 #dv-form {
   clear: both;
   margin-top: 10px;
 }
-#dv-new-listing, #dv-new-comment, #a-user-update, #a-forgot {
+#dv-new-listing, #a-user-update, #a-forgot {
   visibility: hidden;
 }
-#div-error-message, #dv-edit-topic, #a-edit-topic-message, #dv-user-form {
+#div-error-message, #dv-edit-topic, #dv-user-form, #dv-new-comment {
   display: none;
 }
-
 .frm_labels {
   text-align: right;
 }
@@ -56,80 +58,55 @@ span {
   grid-column-gap: 0.5em;
   grid-row-gap: 1em;
 }
-
 #dv-header {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-#dv-tagline {
-  grid-area: 1 / 1;
-}
+#dv-tagline { grid-area: 1 / 1; }
 #dv-register, #dv-logout {
   gird-area: 1 / 2;
   text-align: right;
 }
-
 /* login page only */
-#login-page{
-  grid-template-rows: 2em 1fr 1fr;
-}
+#login-page{ grid-template-rows: 2em 1fr 1fr; }
 #dv-form-login{
   grid-area: 2 / 1;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr;
 }
-#lbl-username {
-  grid-area: 1 / 1;
-}
-#npt-username {
-  grid-area: 1 / 2;
-}
-#lbl-password {
-  grid-area: 2 / 1;
-}
-#npt-password {
-  grid-area: 2 / 2;
-}
-#frm-login-submit {
-  grid-area: 3 / 2;
-  width: 5em;
-  place-self: center;
-}
-#frm-login-reset {
-  grid-area: 3 / 1;
-  width: 5em;
-  place-self: center;
-}
+#lbl-username { grid-area: 1 / 1; }
+#npt-username { grid-area: 1 / 2; }
+#lbl-password { grid-area: 2 / 1; }
+#npt-password { grid-area: 2 / 2; }
+#frm-login-submit { grid-area: 3 / 2; }
+#frm-login-reset { grid-area: 3 / 1; }
 #dv-forgot {
   grid-area: 3 / 1;
   place-self: center;
   font-size: 0.75em;
 }
-
 /* listing page */
 #listing-page {
   grid-template-rows: 2em 1em auto 2em 1fr;
 }
+#dv-listing-header {
+  grid-template-columns: 1fr 1fr;
+}
+#dv-listing-title {
+  font-weight: bold;
+  grid-column: 1;
+}
+#dv-listing-create {
+  grid-column: 2;
+  text-align: right;
+}
 #dv-new-listing {
   grid-template-columns: 25% auto 10%;
 }
-#npt-topic-name {
-  grid-area: 1 / 1;
-}
-#npt-topic-desc{
-  grid-area: 1 / 2;
-}
-#frm-listing-cancel {
-  grid-row: 2;
-  grid-column: 1;
-  width: 5em;
-  place-self: center;
-}
-#frm-listing-submit {
-  grid-area: 2 / 2;
-  width: 5em;
-  place-self: center;
-}
+#npt-list-topic-name { grid-area: 1 / 1; }
+#npt-topic-desc{ grid-area: 1 / 2; }
+#frm-listing-cancel { grid-area: 2 / 1; }
+#frm-listing-submit { grid-area: 2 / 2; }
 .dv-topic {
   display: grid;
   grid-template-rows: 1em 1fr;
@@ -138,25 +115,17 @@ span {
   grid-row-gap: 0.5em;
   align-items: center;
 }
-.spn_topic_id {
-  grid-area: 1 / 1;
-}
-.a_topic_link {
-  grid-area: 1 / 2;
-}
+.spn_topic_id { grid-area: 1 / 1; }
+.a_topic_link { grid-area: 1 / 2; }
 .spn_topic_votes {
   grid-area: 1 / 3;
-  place-self: center;
-}
-.voteBtn {
-  grid-area: 1 / 4;
   place-self: center;
 }
 .dv_topic_desc {
   grid-row: 2;
   grid-column: 1 / span 5;
   margin-left: 1.5em;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   padding: 5px;
   border-width: 1px;
   border-color: #dddddd;
@@ -166,62 +135,90 @@ span {
 /* topics page */
 #topic-page {
   grid-template-rows: 2em 1fr 1em auto 1em 1fr 1em;
+  grid-row-gap: 0.5em;
 }
 #dv-topic {
-  grid-template-rows: 1em 2fr;
-  grid-template-columns: auto 1em 1em 1em 50%;
+  grid-template-rows: 1em 1fr 1em;
+  grid-template-columns: 50% 1em 1em auto;
 }
-#dv-topic-title {
-  grid-area: 1 / 1;
-}
-#dv-topic-vote {
-  grid-area: 1 / 2;
-}
-#a-topic-vote-btn {
-  grid-area: 1 / 3;
-}
+#dv-topic-title { grid-area: 1 / 1; }
+#dv-topic-vote { grid-area: 1 / 2; }
+#a-topic-vote-btn { grid-area: 1 / 3; }
 #dv-topic-desc {
+  grid-column: 1 / 5;
+  grid-row: 2;
   margin-left: 0;
+  margin-bottom: 0;
 }
+#dv-topic-footer {
+  grid-row: 3;
+  grid-column: 1 / 5;
+  grid-template-columns: 25% 25% auto;
+}
+#a-update-link { grid-area: 1 / 1; }
+#a-delete-link { grid-area: 1 / 2; }
+#dv-edit-topic {
+  grid-template-rows: 1.5em 1em auto 1.5em;
+  grid-template-columns: 10% 30% auto;
+  grid-row-gap: 0.5em;
+  margin-bottom: 0.9em;
+  align-items: center;
+}
+#lbl-topic-name { grid-area: 1 / 1; }
+#npt-topic-name { grid-area: 1 / 2; }
+#lbl-topic-description { grid-area: 2 / 1; }
+#ta-topic-description {
+  grid-row: 3;
+  grid-column: 1 / 4;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+#dv_edit_footer_btns {
+  grid-row: 4;
+  grid-column: 1 / 4;
+  grid-template-columns: 25% 25% auto;
+}
+#frm-topic-cancel { grid-area: 1 / 1; }
+#frm-topic-submit { grid-area: 1 / 2; }
 #dv-comments-header {
   font-size: 0.8em;
+  align-self: center;
+  border-bottom-style: solid;
+  border-color: #cccccc;
+  border-bottom-width: 1px;
 }
 #dv-comment-box {}
 .commmentGrid {
   display: grid;
-  grid-template-rows: 1em auto;
-  grid-template-columns: 1em auto;
+  grid-template-rows: 1em 1fr auto;
+  grid-template-columns: 1.5em 25% 25% auto;
   grid-column-gap: 0.5em;
   grid-row-gap: 0.5em;
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.75em;
 }
 .commenter_name {
   grid-row: 1;
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
+}
+.comment_id {
+  grid-row: 2;
+  grid-column: 1;
 }
 .dv_comment {
   grid-row: 2;
-  grid-column: 2;
+  grid-column: 2 / 5;
   background-color: #efefef;
   padding: 0.5em;
 }
 .dv_update_delete {
   grid-row: 3;
-  grid-column: 1 / 2;
+  grid-column: 1 / 5;
+  display: grid;
+  grid-template-columns: 20% 20% auto;
 }
-.spn_update_link {
-  grid-column: 1;
-  width: 5em;
-  font-size: 0.75em;
-  place-self: center;
-}
-.spn_delete_link {
-  grid-column: 1;
-  width: 5em;
-  font-size: 0.75em;
-  place-self: center;
-}
+.spn_update_link { grid-column: 1; }
+.spn_delete_link { grid-column: 2; }
 #dv-new-comment {
   grid-template-rows: 1fr 2em;
   grid-template-columns: 25% 25% auto;
@@ -230,16 +227,8 @@ span {
   grid-row: 1;
   grid-column: 1 / 4;
 }
-#frm-comment-submit {
-  grid-area: 2 / 2;
-  width: 5em;
-  place-self: center;
-}
-#frm-comment-cancel {
-  grid-area: 2 / 1;
-  width: 5em;
-  place-self: center;
-}
+#frm-comment-submit { grid-area: 2 / 2; }
+#frm-comment-cancel { grid-area: 2 / 1; }
 /* user page */
 #user-page, #register-page {
   grid-template-rows: 2em 1fr 1em auto;
@@ -261,9 +250,7 @@ span {
 #lbl-lastname-dsp, #lbl-lastname-edt, #lbl_reg_password2 {
   grid-area: 3 / 1;
 }
-#dv-user-id {
-  grid-area: 1 / 3;
-}
+#dv-user-id { grid-area: 1 / 3; }
 #dv-user-email, #npt-user-email, #npt-reg-username {
   grid-area: 1 / 2;
 }
@@ -273,19 +260,9 @@ span {
 #dv-user-lastName, #npt-user-lastName, #rpt-reg-password {
   grid-area: 3 / 2;
 }
-#frm-user-submit, #a-user-update {
-  grid-area: 4 / 2;
-  width: 5em;
-  place-self: center;
-}
-#frm-user-cancel {
-  grid-area: 4 / 1;
-  width: 5em;
-  place-self: center;
-}
-#a-user-update {
-  font-size: 0.8em;
-}
+#frm-user-submit, #a-user-update { grid-area: 4 / 2; }
+#frm-user-cancel { grid-area: 4 / 1; }
+#a-user-update { font-size: 0.8em; }
 .can_update {
   background-color: #ffffff;
   padding: 2px;
@@ -295,25 +272,9 @@ span {
   grid-template-rows: 1.5em 1.5em 1.5em 1.5em, 1.5em, 1.5em;
   grid-template-columns: 25% 25% auto;
 }
-#lbl_reg_firstName {
-  grid-area: 4 / 1;
-}
-#npt-reg-firstName {
-  grid-area: 4 / 2;
-}
-#lbl_reg_lastName {
-  grid-area: 5 / 1;
-}
-#npt-reg-lastName {
-  grid-area: 5 / 2;
-}
-#frm-reg-submit {
-  grid-area: 6 / 2;
-  width: 5em;
-  place-self: center;
-}
-#frm-reg-reset {
-  grid-area: 6 / 1;
-  width: 5em;
-  place-self: center;
-}
+#lbl_reg_firstName { grid-area: 4 / 1; }
+#npt-reg-firstName { grid-area: 4 / 2; }
+#lbl_reg_lastName { grid-area: 5 / 1; }
+#npt-reg-lastName { grid-area: 5 / 2; }
+#frm-reg-submit { grid-area: 6 / 2; }
+#frm-reg-reset { grid-area: 6 / 1; }
