--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,12 @@ input[type=text], input[type=password], textarea {
   from {opacity: 1;}
   to {opacity: 0;}
 }
-#dv-header { margin-bottom: 1em; }
-#dv-header { height: 20px; }
+#dv-header {
+  margin-bottom: 1em;
+  height: 1em;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
 #dv-tagline { float: left; }
 #dv-logout { float: right; }
 #dv-form {
@@ -85,10 +89,6 @@ input[type=text], input[type=password], textarea {
   grid-column-gap: 0.5em;
   grid-row-gap: 1em;
 }
-#dv-header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
 #dv-tagline { grid-area: 1 / 1; }
 #dv-register, #dv-logout {
   gird-area: 1 / 2;
@@ -97,16 +97,16 @@ input[type=text], input[type=password], textarea {
 /* login page only */
 #login-page{ grid-template-rows: 2em 1fr auto; }
 #dv-form-login{
-  grid-area: 2 / 1;
+  grid-row: 2
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-columns: auto 20% 40% auto;
 }
-#lbl-username { grid-area: 1 / 1; }
-#npt-username { grid-area: 1 / 2; }
-#lbl-password { grid-area: 2 / 1; }
-#npt-password { grid-area: 2 / 2; }
-#frm-login-submit { grid-area: 3 / 2; }
-#frm-login-reset { grid-area: 3 / 1; }
+#lbl-username { grid-area: 1 / 2; }
+#npt-username { grid-area: 1 / 3; }
+#lbl-password { grid-area: 2 / 2; }
+#npt-password { grid-area: 2 / 3; }
+#frm-login-submit { grid-area: 3 / 3; }
+#frm-login-reset { grid-area: 3 / 2; }
 #dv-forgot {
   grid-area: 3 / 1;
   place-self: center;
@@ -299,7 +299,7 @@ input[type=text], input[type=password], textarea {
 /* registration page */
 #dv-reg-form {
   grid-template-rows: 1.5em 1.5em 1.5em 1.5em, 1.5em, 1.5em;
-  grid-template-columns: 25% 25% auto;
+  grid-template-columns: 1fr 1fr auto;
 }
 #lbl_reg_firstName { grid-area: 4 / 1; }
 #npt-reg-firstName { grid-area: 4 / 2; }
